<?xml version="1.0" encoding="utf-8"?>

<!--
  MIT License

  Copyright (c) 2025 GRIN Project Contributors

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in
  all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  SOFTWARE.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gridCameraRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Camera preview occupies the full background. -->
    <ImageView
        android:id="@+id/posterizedPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Grid overlay sits above the preview. -->
    <io.grin.demo.GridOverlayView
        android:id="@+id/gridOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 6-column guidelines for control placement. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1667" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6667" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8333" />

    <!-- 9-row guidelines for control placement. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1111" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2222" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4444" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5556" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6667" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7778" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8889" />

    <!-- Flash button (row 1, column 2). -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/flashButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/flash_off"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toTopOf="@id/row1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Gallery button centered on row 1. -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_gallery"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toTopOf="@id/row1"
        app:layout_constraintEnd_toStartOf="@id/col4"
        app:layout_constraintStart_toStartOf="@id/col2"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Settings button (row 1, right column). -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/camera_settings"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toTopOf="@id/row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/col5"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Mode button (row 8, column 2). -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/presetButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset_classic"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toTopOf="@id/row8"
        app:layout_constraintEnd_toStartOf="@id/col2"
        app:layout_constraintStart_toStartOf="@id/col1"
        app:layout_constraintTop_toTopOf="@id/row7" />

    <!-- Flip camera button (row 8, column 5). -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/flipButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip_camera"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toTopOf="@id/row8"
        app:layout_constraintEnd_toStartOf="@id/col5"
        app:layout_constraintStart_toStartOf="@id/col4"
        app:layout_constraintTop_toTopOf="@id/row7" />

    <!-- Capture button spans row 9, columns 3-4. -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        app:backgroundTint="@color/grin_button_backing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/col4"
        app:layout_constraintStart_toStartOf="@id/col2"
        app:layout_constraintTop_toTopOf="@id/row8" />
</androidx.constraintlayout.widget.ConstraintLayout>
